unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/cmbls__Intercompany_Transaction__c.object-meta.xml
<CustomObject>
    <label>Intercompany Transaction</label>
    <nameField>
        <displayFormat>ICT-{0000000}</displayFormat>
        <label>Intercompany Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intercompany Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>