unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Date_Paid_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid_Formula__c</fullName>
    <formula>NULLVALUE(Date_Paid__c, DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Paid Formula</label>
    <type>Date</type>
</CustomField>