unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/GL_Date__c.field-meta.xml
<CustomField>
    <fullName>GL_Date__c</fullName>
    <formula>IF( NOT(ISBLANK(Payment__c)),
 Payment__r.cmbls__Effective_Date__c  ,
 cmbls__Disbursement__r.cmbls__Date_Sent__c 
)</formula>
    <label>GL Date</label>
    <type>Date</type>
</CustomField>