unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/LoanNumber__c.field-meta.xml
<CustomField>
    <fullName>LoanNumber__c</fullName>
    <formula>IF( NOT(ISBLANK(Payment__c)),
     Payment__r.LoanNumber__c ,
      cmbls__Disbursement__r.Loan_Number__c 
)</formula>
    <label>LoanNumber</label>
    <type>Text</type>
</CustomField>