unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/NF_to_NFAS3_Transfer__c.field-meta.xml
<CustomField>
    <fullName>NF_to_NFAS3_Transfer__c</fullName>
    <formula>OR(
            AND(
                cmbls__Loan_Transfer_Summary__r.cmbls__Previous_Fund__r.Name = 'National Funding',
                cmbls__Loan_Transfer_Summary__r.cmbls__New_Fund__r.Name = 'NFAS3'
            ),
            AND(
                cmbls__Loan_Transfer_Summary__r.cmbls__Previous_Fund__r.Name = 'NFAS3',
                cmbls__Loan_Transfer_Summary__r.cmbls__New_Fund__r.Name = 'National Funding'
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NF to NFAS3 Transfer</label>
    <type>Checkbox</type>
</CustomField>