unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Payee_Cash_GL__c.field-meta.xml
<CustomField>
    <fullName>Payee_Cash_GL__c</fullName>
    <label>Payee Cash GL #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>