unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Payee_Cash_GL_NFAS2__c.field-meta.xml
<CustomField>
    <fullName>Payee_Cash_GL_NFAS2__c</fullName>
    <label>Payee Cash GL # (NFAS2 Transfer)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>