unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Payee_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Payee_Intercompany__c</fullName>
    <label>Payee Intercompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>