unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Payer_Cash_GL__c.field-meta.xml
<CustomField>
    <fullName>Payer_Cash_GL__c</fullName>
    <label>Payer Cash GL #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>