unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Payer_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Payer_Intercompany__c</fullName>
    <label>Payer Intercompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>