unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>cmbls__Payment__c</referenceTo>
    <relationshipLabel>Intercompany Transactions</relationshipLabel>
    <relationshipName>Intercompany_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>