unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Posted_To_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Posted_To_Accounting__c</fullName>
    <label>Posted to Accounting</label>
    <type>Date</type>
</CustomField>