unpackaged/main/default/objects/cmbls__Intercompany_Transaction__c/fields/Repayment__c.field-meta.xml
<CustomField>
    <fullName>Repayment__c</fullName>
    <formula>IF( NOT(ISBLANK(Payment__c)), 
    Payment__r.cmbls__Repayment__c ,  
    cmbls__Disbursement__r.cmbls__Repayment__c 
)</formula>
    <label>Repayment</label>
    <type>Text</type>
</CustomField>